parser/tests/snapshots/test_parser__type_map3.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(type_map3), types::parse_type_desc,\n           \"map<address, map<u8, map<u8, u8>>>\")"

---
Node(
  kind: Map(
    from: Node(
      kind: Base(
        base: "address",
      ),
      span: Span(
        start: 4,
        end: 11,
      ),
    ),
    to: Node(
      kind: Map(
        from: Node(
          kind: Base(
            base: "u8",
          ),
          span: Span(
            start: 17,
            end: 19,
          ),
        ),
        to: Node(
          kind: Map(
            from: Node(
              kind: Base(
                base: "u8",
              ),
              span: Span(
                start: 25,
                end: 27,
              ),
            ),
            to: Node(
              kind: Base(
                base: "u8",
              ),
              span: Span(
                start: 29,
                end: 31,
              ),
            ),
          ),
          span: Span(
            start: 21,
            end: 32,
          ),
        ),
      ),
      span: Span(
        start: 13,
        end: 33,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 34,
  ),
)
