parser/tests/snapshots/test_parser__type_map4.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(type_map4), types::parse_type_desc,\n           \"map < address , map < u8, u256 > >\")"

---
Node(
  kind: Map(
    from: Node(
      kind: Base(
        base: "address",
      ),
      span: Span(
        start: 6,
        end: 13,
      ),
    ),
    to: Node(
      kind: Map(
        from: Node(
          kind: Base(
            base: "u8",
          ),
          span: Span(
            start: 22,
            end: 24,
          ),
        ),
        to: Node(
          kind: Base(
            base: "u256",
          ),
          span: Span(
            start: 26,
            end: 30,
          ),
        ),
      ),
      span: Span(
        start: 16,
        end: 32,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 34,
  ),
)
