parser/tests/snapshots/test_parser__type_name.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(type_name), types::parse_type_desc, \"MyType\")"

---
Node(
  kind: Base(
    base: "MyType",
  ),
  span: Span(
    start: 0,
    end: 6,
  ),
)
