parser/tests/snapshots/test_parser__type_tuple.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(type_tuple), types::parse_type_desc,\n           \"(u8, u16, address, map<u8, u8>)\")"

---
Node(
  kind: Tuple(
    items: [
      Node(
        kind: Base(
          base: "u8",
        ),
        span: Span(
          start: 1,
          end: 3,
        ),
      ),
      Node(
        kind: Base(
          base: "u16",
        ),
        span: Span(
          start: 5,
          end: 8,
        ),
      ),
      Node(
        kind: Base(
          base: "address",
        ),
        span: Span(
          start: 10,
          end: 17,
        ),
      ),
      Node(
        kind: Map(
          from: Node(
            kind: Base(
              base: "u8",
            ),
            span: Span(
              start: 23,
              end: 25,
            ),
          ),
          to: Node(
            kind: Base(
              base: "u8",
            ),
            span: Span(
              start: 27,
              end: 29,
            ),
          ),
        ),
        span: Span(
          start: 19,
          end: 30,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 31,
  ),
)
